--- a/frontend/dashboard.html
+++ b/frontend/dashboard.html
@@ -19,12 +19,12 @@
 <body>
     <div class="main-content">
         <header>
-            <h1><b>Webarch Forms</b></h1>
+            <h1 class="nav-heading"><b>Webarch Forms</b></h1>
             <div id="menu" class="fas fa-bars"></div>
             <div>
                 <div class="search-wrapper py-3 ">
                     <input type="text" placeholder="Search">
-                    <img src="./images/person.png" width="40px" height="40px" alt="">
+                    <img src="./images/person.png" width="40px" height="40px" alt="person">
                     <button type="submit" class="btn btn-light">
             <i class="fas fa-sign-out-alt sign-out">Logout</i>
           </button>
@@ -33,7 +33,7 @@
         </header>
         <div class="row">
 
-            <div class="col-xs-12 col-sm-12 col-md-3 column ">
+            <div class="col-xs-12 col-sm-3 col-md-3 column ">
                 <div class="py-5 text-center">
                     <button type="button" class="btn btn-success create-btn grow" onclick="document.getElementById('create').style.display='block'"><i class="fas fa-plus-circle"></i>  Create</button>
                     <div id="create" class="modal">
@@ -67,14 +67,16 @@
                             <div class="grid-item"></div>
                             <div class="grid-item"></div>
                             <div class="grid-item"></div>
+                            <div class="grid-item"></div>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <div class="col-xs-12 col-sm-12 col-md-9">
-                <div class="column-right py-5"></div>
+            <div class="col-xs-12 col-sm-9 col-md-9">
+                <div class="column-right py-2"></div>
                 <div class="container container-list">
+
                     <div class="toggle-btns">
                         <p class="alignleft"><b>Recently Used</b></p>
                         <p class="alignright"><i class="fas fa-th-large grid-layout active grow"></i> A-Z</p>
@@ -82,46 +84,50 @@
                     <ul class="list-group list-group-flush py-5">
                         </li>
                         <li class="list-group-item">
-                            <p class="alignleft">Lorem Ipsum dolor ipsum</p>
-                            <p class="alignright">31/12/2021 31/12/2021 <button class="active btn btn-primary link-btn grow"> Get Link</button> <i class="fas fa-ellipsis-v btn"></i></p>
+                            <p class="alignleft"><b>Name</b></p>
+                            <p class="alignright"><b class="list-header">Date Of Creation</b> <b class="list-header">End Date</b> <b class="list-header">Link</b></p>
 
                         </li>
                         <li class="list-group-item">
                             <p class="alignleft">Lorem Ipsum dolor ipsum</p>
-                            <p class="alignright">31/12/2021 31/12/2021 <button class="active btn btn-primary link-btn grow"> Get Link</button> <i class="fas fa-ellipsis-v btn"></i></p>
+                            <p class="alignright"><span class="list-body">31/12/2021</span> <span class="list-body2">31/12/2021</span> <button class="active btn btn-primary link-btn grow"> Get Link</button> <i class="fas fa-ellipsis-v btn"></i></p>
                         </li>
                         <li class="list-group-item">
                             <p class="alignleft">Lorem Ipsum dolor ipsum</p>
-                            <p class="alignright">31/12/2021 31/12/2021 <button class="active btn btn-primary link-btn grow"> Get Link</button> <i class="fas fa-ellipsis-v btn"></i></p>
+                            <p class="alignright"><span class="list-body">31/12/2021</span> <span class="list-body2">31/12/2021</span> <button class="active btn btn-primary link-btn grow"> Get Link</button> <i class="fas fa-ellipsis-v btn"></i></p>
                         </li>
                         <li class="list-group-item">
                             <p class="alignleft">Lorem Ipsum dolor ipsum</p>
-                            <p class="alignright">31/12/2021 31/12/2021 <button class="btn btn-primary link-btn grow" disabled> Get Link</button> <i class="fas fa-ellipsis-v btn"></i></p>
+                            <p class="alignright"><span class="list-body">31/12/2021</span> <span class="list-body2">31/12/2021</span> <button class="active btn btn-primary link-btn grow"> Get Link</button> <i class="fas fa-ellipsis-v btn"></i></p>
                         </li>
                         <li class="list-group-item">
                             <p class="alignleft">Lorem Ipsum dolor ipsum</p>
-                            <p class="alignright">31/12/2021 31/12/2021 <button class="active btn btn-primary link-btn grow"> Get Link</button> <i class="fas fa-ellipsis-v btn"></i></p>
+                            <p class="alignright"><span class="list-body">31/12/2021</span> <span class="list-body2">31/12/2021</span> <button class="active btn btn-primary link-btn grow"> Get Link</button> <i class="fas fa-ellipsis-v btn"></i></p>
                         </li>
                         <li class="list-group-item">
                             <p class="alignleft">Lorem Ipsum dolor ipsum</p>
-                            <p class="alignright">31/12/2021 31/12/2021 <button class="active btn btn-primary link-btn grow"> Get Link</button> <i class="fas fa-ellipsis-v btn"></i></p>
+                            <p class="alignright"><span class="list-body">31/12/2021</span> <span class="list-body2">31/12/2021</span> <button class="active btn btn-primary link-btn grow"> Get Link</button> <i class="fas fa-ellipsis-v btn"></i></p>
                         </li>
                         <li class="list-group-item">
                             <p class="alignleft">Lorem Ipsum dolor ipsum</p>
-                            <p class="alignright">31/12/2021 31/12/2021 <button class="btn btn-primary link-btn grow" disabled> Get Link</button> <i class="fas fa-ellipsis-v btn"></i></p>
+                            <p class="alignright"><span class="list-body">31/12/2021</span> <span class="list-body2">31/12/2021</span> <button class="active btn btn-primary link-btn grow"> Get Link</button> <i class="fas fa-ellipsis-v btn"></i></p>
+                        </li>
+                        <li class="list-group-item">
+                            <p class="alignleft">Lorem Ipsum dolor ipsum</p>
+                            <p class="alignright"><span class="list-body">31/12/2021</span> <span class="list-body2">31/12/2021</span> <button class="active btn btn-primary link-btn grow"> Get Link</button> <i class="fas fa-ellipsis-v btn"></i></p>
                         </li>
                     </ul>
                 </div>
 
-                <div class=" card-container none">
+                <div class=" card-container none ">
                     <div class="row">
                         <div class="toggle-btns">
                             <p class="alignleft"><b>Recently Used</b></p>
                             <p class="alignright"><i class="fas fa-list list-layout active grow"></i> A-Z</p>
                         </div>
-                        <div class="col-xs-12 col-sm-6 col-md-3">
+                        <div class="col-xs-5 col-sm-6 col-lg-3 col-md-4 d-flex justify-content-center">
                             <div class="card">
-                                <img src="img3.png" class="card-img-top" alt="...">
+                                <img src="./images/card.png" class="card-img-top" alt="image card">
                                 <div class="card-body">
                                     <h5 class="card-title">Lorem Ipsum</h5>
                                     <p class="card-text">Last Modified on 31/12/2021, 12:00pm</p>
@@ -130,9 +136,9 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xs-12 col-sm-6 col-md-3">
+                        <div class="col-xs-5 col-sm-6 col-lg-3 col-md-4 d-flex justify-content-center">
                             <div class="card">
-                                <img src="img3.png" class="card-img-top " alt="...">
+                                <img src="./images/card.png" class="card-img-top " alt="image card">
                                 <div class="card-body">
                                     <h5 class="card-title">Lorem Ipsum</h5>
                                     <p class="card-text">Last Modified on 31/12/2021, 12:00pm</p>
@@ -141,9 +147,9 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xs-12 col-sm-6 col-md-3">
+                        <div class="col-xs-5 col-sm-6 col-lg-3 col-md-4 d-flex justify-content-center">
                             <div class="card">
-                                <img src="img3.png" class="card-img-top" alt="...">
+                                <img src="./images/card.png" class="card-img-top" alt="image card">
                                 <div class="card-body">
                                     <h5 class="card-title">Lorem Ipsum</h5>
                                     <p class="card-text">Last Modified on 31/12/2021, 12:00pm</p>
@@ -152,9 +158,9 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xs-12 col-sm-6 col-md-3">
+                        <div class="col-xs-5 col-sm-6 col-lg-3 col-md-4 d-flex justify-content-center">
                             <div class="card">
-                                <img src="img3.png" class="card-img-top" alt="...">
+                                <img src="./images/card.png" class="card-img-top" alt="image card">
                                 <div class="card-body">
                                     <h5 class="card-title">Lorem Ipsum</h5>
                                     <p class="card-text">Last Modified on 31/12/2021, 12:00pm</p>
@@ -163,9 +169,9 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xs-12 col-sm-6 col-md-3">
+                        <div class="col-xs-5 col-sm-6 col-lg-3 col-md-4 d-flex justify-content-center">
                             <div class="card">
-                                <img src="img3.png" class="card-img-top" alt="...">
+                                <img src="./images/card.png" class="card-img-top" alt="image card">
                                 <div class="card-body">
                                     <h5 class="card-title">Lorem Ipsum</h5>
                                     <p class="card-text">Last Modified on 31/12/2021, 12:00pm</p>
@@ -174,9 +180,9 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xs-12 col-sm-6 col-md-3">
+                        <div class="col-xs-5 col-sm-6 col-lg-3 col-md-4 d-flex justify-content-center">
                             <div class="card">
-                                <img src="img3.png" class="card-img-top" alt="...">
+                                <img src="./images/card.png" class="card-img-top" alt="image card">
                                 <div class="card-body">
                                     <h5 class="card-title">Lorem Ipsum</h5>
                                     <p class="card-text">Last Modified on 31/12/2021, 12:00pm</p>
@@ -185,9 +191,9 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xs-12 col-sm-6 col-md-3">
+                        <div class="col-xs-5 col-sm-6 col-lg-3 col-md-4 d-flex justify-content-center">
                             <div class="card">
-                                <img src="img3.png" class="card-img-top" alt="...">
+                                <img src="./images/card.png" class="card-img-top" alt="image card">
                                 <div class="card-body">
                                     <h5 class="card-title">Lorem Ipsum</h5>
                                     <p class="card-text">Last Modified on 31/12/2021, 12:00pm</p>
@@ -196,9 +202,9 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xs-12 col-sm-6 col-md-3">
+                        <div class="col-xs-5 col-sm-6 col-lg-3 col-md-4 d-flex justify-content-center">
                             <div class="card">
-                                <img src="img3.png" class="card-img-top" alt="...">
+                                <img src="./images/card.png" class="card-img-top" alt="image card">
                                 <div class="card-body">
                                     <h5 class="card-title">Lorem Ipsum</h5>
                                     <p class="card-text">Last Modified on 31/12/2021, 12:00pm</p>
